--- a/Factory/Factory.csproj
+++ b/Factory/Factory.csproj
@@ -12,6 +12,7 @@
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />
         <PackageReference Include="MySql.Data.EntityFramework" Version="8.0.28" />
         <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
         <PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.0" />
